# fribidi__fribidi.old

./: .cvsignore  .indent.pro  ANNOUNCE  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.noglib  NEWS  README  TODO  acconfig.h  acinclude.m4  bootstrap  configure  configure.in  fribidi-config.in  fribidi.c  fribidi.h  fribidi.spec.in  fribidi_benchmark.c  fribidi_bidi_types.c  fribidi_char_sets.c  fribidi_char_sets.h  fribidi_char_sets_cap_rtl.c  fribidi_char_sets_cap_rtl.h  fribidi_char_sets_cp1255.c  fribidi_char_sets_cp1255.h  fribidi_char_sets_cp1256.c  fribidi_char_sets_cp1256.h  fribidi_char_sets_isiri_3342.c  fribidi_char_sets_isiri_3342.h  fribidi_char_sets_iso8859_6.c  fribidi_char_sets_iso8859_6.h  fribidi_char_sets_iso8859_8.c  fribidi_char_sets_iso8859_8.h  fribidi_char_sets_utf8.c  fribidi_char_sets_utf8.h  fribidi_char_type.c  (+33 more)
conformance/: dotest  findbad  findbads  test  test_gen.c  test_gen_explicit.c  test_gen_rand.c
conformance/reference/: bidi.h  bidiref.cpp
tests/: test-CapRTL  test-CapRTL.reference  test-explicit  test-explicit.reference  test-hebrew.reference
unidata/: CreateGetType.pl
win/: fribidi.dsp  readme.txt  version.rc
